[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/items/OEUF_LVL3.png" type="Texture" id=1]
[ext_resource path="res://source/actors/Egg.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 35.7444
height = 51.0445

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[node name="Egg" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3, 2 )
rotation = -3.14159
scale = Vector2( 6, 6 )
texture = ExtResource( 1 )
flip_v = true
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 21 )
scale = Vector2( 1.17501, 0.832427 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -111.0
margin_top = -110.0
margin_right = 1.0
margin_bottom = -68.0
rect_scale = Vector2( 2, 2 )
align = 1
valign = 1

[node name="LabelTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Node2D_body_entered"]
[connection signal="timeout" from="LabelTimer" to="." method="_on_LabelTimer_timeout"]
